# Manga-Colorization-FJ

./: .gitignore  colorizator.py  pyproject.toml  requirements.txt
