[tool.poetry]
name = "manga-colorization-fj"
version = "0.1.0"
description = ""
authors = ["ACGMN <ootopoo@vip.qq.com>"]
readme = "README.md"
packages = [{ include = "manga_colorization_fj" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.5.2"
Pillow = "^9.5.0"
ptflops = "^0.6.9"
scikit_image = "^0.20.0"
#skimage = "^0.0.0"
opencv_python = "^4.7.0.72"
#torch = { version = "2.0.0+cu118", source = "pytorch" }
#torch = { url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu118/torch-2.0.0+cu118-cp311-cp311-win_amd64.whl" }
torch = { url = "https://mirrors.aliyun.com/pytorch-wheels/cu118/torch-2.0.0+cu118-cp311-cp311-win_amd64.whl" }
#torchvision = { version = "0.15.1+cu118", source = "pytorch" }
#torchvision = { url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu118/torchvision-0.15.1+cu118-cp311-cp311-win_amd64.whl" }
torchvision = { url = "https://mirrors.aliyun.com/pytorch-wheels/cu118/torchvision-0.15.1+cu118-cp311-cp311-win_amd64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[plugins]
#[plugins.pypi_mirror]
#url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[[tool.poetry.source]]
name = "aliyun-source"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

#[[tool.poetry.source]]
#name = "pytorch"
#url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu118/"
#secondary = true